--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
     width: 50px; /* Adjust size as needed */
     border-radius: 50%;
     border: 2px solid rgba(204, 94, 255, 1); /* Pink border */
+    position: absolute;
+    top: -30px; /* Position above the small profile picture */
+    left: 50%;
 }
 
 .text-bubble {
