--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             font-family: 'Brams';
             margin: 0;
             padding: 0;
-            overflow-y: auto; /* Enable vertical scroll */
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            overflow-y: auto;
+            overflow-x: hidden;
             color: #fff;
-            position: relative; /* For layering content over the video */
-            min-height: 100vh; /* Ensure body takes at least full viewport height */
-            background-color: #1f1f1f; /* Set a dark background color */
+            position: relative;
+            min-height: 100vh;
+            background-color: #1f1f1f;
         }
 
         #loading-screen {
@@ -46,13 +46,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Crop and fit the video */
-            z-index: -1; /* Ensure the video is in the background */
-            pointer-events: none; /* Make the video non-interactive */
+            object-fit: cover;
+            z-index: -1;
+            pointer-events: none;
         }
 
         #loading-video, #main-video {
-            display: none; /* Hide loading video and main video initially */
+            display: none;
         }
 
         #loading-screen h1 {
@@ -61,29 +61,29 @@
         }
 
         #main-content {
-            display: none; /* Hide the main content initially */
-            padding-bottom: 50px; /* Add space for the footer */
+            display: none;
+            padding-bottom: 50px;
         }
 
         header {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            animation: glowHeader 2s ease-in-out infinite alternate; /* Add glow animation */
-            position: fixed; /* Fix header position */
+            animation: glowHeader 2s ease-in-out infinite alternate;
+            position: fixed;
             width: 100%;
             top: 0;
-            z-index: 1000; /* Ensure it stays above other content */
-            display: flex; /* Use flexbox for centering */
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         @keyframes glowHeader {
             0% {
-                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow */
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0);
             }
             100% {
-                box-shadow: 0 0 30px rgba(204, 94, 255, 1); /* Glow effect */
+                box-shadow: 0 0 30px rgba(204, 94, 255, 1);
             }
         }
 
@@ -93,8 +93,8 @@
             text-transform: normal;
             letter-spacing: 0px;
             color: #fff;
-            text-align: center; /* Center align header text */
-            width: 100%; /* Ensure text takes full width */
+            text-align: center;
+            width: 100%;
         }
 
         .content {
@@ -103,30 +103,39 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
-            max-width: 1000px; /* Limit content width */
+            margin-top: 80px;
+            max-width: 1000px;
             margin-left: auto;
             margin-right: auto;
-            width: 90%; /* Adjust width as needed */
+            width: 90%;
         }
 
         .profile-picture {
             position: relative;
-            max-width: 12vw; /* Responsive size */
+            max-width: 12vw;
             margin-top: 4px;
             margin-bottom: 4px;
-            border-radius: 50%; /* Circular shape */
-            overflow: hidden; /* Ensure image does not overflow */
+            border-radius: 50%;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            border: 4px solid rgba(204, 94, 255, 1); /* Solid 1px pink border */
-            animation: glow 3s ease-in-out infinite alternate; /* Glowing animation */
+            border: 4px solid rgba(204, 94, 255, 1);
+            animation: glow 3s ease-in-out infinite alternate;
         }
 
         .profile-picture img {
             width: 100%;
-            border-radius: 50%; /* Circular shape */
+            border-radius: 50%;
+        }
+
+        .small-profile-picture {
+            position: absolute;
+            bottom: -10%;
+            right: -10%;
+            width: 33%;
+            border-radius: 50%;
+            border: 3px solid rgba(204, 94, 255, 1);
         }
 
         .fire-animation {
@@ -135,10 +144,10 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background-image: radial-gradient(circle, #ff66cc, #993399); /* Pink/purple gradient */
+            background-image: radial-gradient(circle, #ff66cc, #993399);
             animation: fireAnimation 2s ease-in-out infinite alternate;
-            border-radius: 50%; /* Ensure it's circular */
-            z-index: -1; /* Behind the profile picture */
+            border-radius: 50%;
+            z-index: -1;
         }
 
         @keyframes fireAnimation {
@@ -162,7 +171,7 @@
         }
 
         .intro {
-            max-width: 90vw; /* Responsive size */
+            max-width: 90vw;
             padding: 20px;
             background-color: transparent;
             margin-bottom: 20px;
@@ -175,14 +184,14 @@
         }
 
         .intro p {
-            font-size: 4em; /*Title size*/
+            font-size: 1.2em;
             line-height: 1;
             margin-top: 5px;
             margin-bottom: 0px;
         }
 
         .links {
-            margin-top: 0px; /* Adjusted margin to bring links closer to social media text */
+            margin-top: 0px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -191,11 +200,11 @@
 
         .links a {
             margin: 8px;
-            padding: 5px 10px; /* Responsive padding */
+            padding: 5px 10px;
             background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
-            font-size: 3em; /* Responsive font size */
+            font-size: 3em;
             border-radius: 15px;
             border: 2px solid transparent;
             position: relative;
@@ -237,10 +246,10 @@
             padding: 10px;
             text-align: center;
             width: 100%;
-            position: fixed; /* Stick footer to the bottom */
+            position: fixed;
             bottom: 0;
             left: 0;
-            z-index: 1000; /* Ensure it stays above other content */
+            z-index: 1000;
         }
 
         footer p {
@@ -254,17 +263,16 @@
 
         @keyframes slideIn {
             0% {
-                right: -100%; /* Start off-screen to the right */
+                right: -100%;
                 opacity: 0;
             }
             100% {
-                right: 0; /* Slide in to the right */
+                right: 0;
                 opacity: 1;
             }
         }
 
         @media (max-width: 1200px) {
-            /* Larger devices adjustments */
             .content {
                 width: 90%;
                 max-width: 1000px;
@@ -272,41 +280,40 @@
         }
 
         @media (max-width: 767px) {
-            /* Smaller devices adjustments */
             .content {
                 width: 90%;
                 max-width: 90%;
             }
 
             .profile-picture {
-                max-width: 40vw; /* Increase profile picture size on smaller screens */
+                max-width: 40vw;
             }
 
             .intro p {
-                font-size: 2em; /* Decrease font size */
+                font-size: 2em;
             }
 
             .links {
-                margin-top: 5px; /* Reduce margin top for links */
+                margin-top: 5px;
             }
 
             .links a {
-                font-size: 2em; /* Decrease font size */
-                padding: 5px 8px; /* Reduce padding */
+                font-size: 2em;
+                padding: 5px 8px;
             }
 
             header {
-                padding: 10px; /* Reduce header padding */
+                padding: 10px;
             }
 
             header h1 {
-                text-align: center; /* Center align header text */
-                width: auto; /* Reset width to auto */
+                text-align: center;
+                width: auto;
             }
 
             footer {
-                position: static; /* Ensure footer is static on smaller screens */
-                margin-top: 20px; /* Add margin to separate from content */
+                position: static;
+                margin-top: 20px;
             }
         }
     </style>
@@ -331,6 +338,7 @@
         <div class="content">
             <div class="profile-picture">
                 <img src="Main Avatar.jpg" alt="Profile Picture">
+                <img src="Small Avatar.jpg" alt="Small Profile Picture" class="small-profile-picture">
                 <div class="fire-animation"></div>
             </div>            
             <div class="intro">
