--- a/index.html
+++ b/index.html
@@ -130,12 +130,17 @@
         }
 
         .small-profile-picture {
-            position: absolute;
-            bottom: -10%;
-            right: -10%;
-            width: 33%;
+            position: relative;
+            max-width: 5vw;
+            margin-top: 4px;
+            margin-bottom: 4px;
             border-radius: 50%;
-            border: 3px solid rgba(204, 94, 255, 1);
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 4px solid rgba(204, 94, 255, 1);
+            animation: glow 3s ease-in-out infinite alternate;
         }
 
         .fire-animation {
