--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         }
 
         .profile-picture {
-            position: relative;
+            position: fixed;
             max-width: 12vw;
             margin-top: 4px;
             margin-bottom: 4px;
@@ -132,8 +132,8 @@
         .small-profile-picture {
             position: relative;
             max-width: 5vw;
-            margin-top: 4px;
-            margin-bottom: 4px;
+            margin-top: 0px;
+            margin-bottom: 0px;
             border-radius: 50%;
             overflow: hidden;
             display: flex;
