--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             bottom: -2%;
             right: -2%;
             width: 5%;
+            max-width: 3vw;
             border-radius: 50%;
             border: 3px solid rgba(204, 94, 255, 1);
         }
